Bug 797229 - Fix two warnings in updater.cpp; r=bbondy